feat: add music

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta property="og:title" content="Дананың ұзату тойы" />
-    <meta property="og:description" content="15 ақпан 2025 жыл, сағат 17:00. Шымкент қаласы, Elegant Hall тойханасы." />
+    <meta property="og:title" content="Үйлену тойына шақыру" />
+    <meta property="og:description" content="15 маусым 2025 жыл, сағат 18:00. Алматы қаласы, Bella Grand тойханасы." />
     <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdxB8MkOXhYg-Paiox869A3jrY3dnAA2yfVw&s" />
-    <meta property="og:url" content="https://rakhymzhan.com" />
+    <meta property="og:url" content="https://svadba-chi.vercel.app/" />
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
