ref: update og title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta property="og:title" content="Үйлену тойына шақыру" />
+    <meta property="og:title" content="Үйлену тойға шақыру" />
     <meta property="og:description" content="15 маусым 2025 жыл, сағат 18:00. Алматы қаласы, Bella Grand тойханасы." />
     <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIS5MzpOAacYU_Fmu_ODLfB5-LGhCataGv8A&s" />
     <meta property="og:url" content="https://svadba-chi.vercel.app/" />
